--- a/menu/cibo/cheesecake.html
+++ b/menu/cibo/cheesecake.html
@@ -18,7 +18,7 @@
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Cheescake"/>
+    <meta property="og:title" content="Cheesecake"/>
     <meta property="og:description" content="Cheesecake in stile New York. Ricca e intensa"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheesecake.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
@@ -63,7 +63,7 @@
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Cheescake</h1>
+                        <h1>Cheesecake</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 4 Giugno 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/contatti/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
