--- a/video/index.html
+++ b/video/index.html
@@ -150,13 +150,12 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                <!-- <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00"> -->
-                <meta itemprop="openingHours" content="Tu,We,Th, Su 18:00-23:00">
-                <meta itemprop="openingHours" content="Fr,Sa 18:00-01:00">
-                <!-- <meta itemprop="openingHours" content="Su 12:00-18:00"> -->
+                <meta itemprop="openingHours" content="We,Th,Su 18:00-23:00">
+                <meta itemprop="openingHours" content="Fr,Sa 18:00-24:00">
+                <meta itemprop="openingHours" content="Su 12:00-14:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar-Gio</p>
+                        <p>Mer-Gio</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p><!--12&ensp;&ndash;&ensp;14
@@ -169,7 +168,7 @@
                         <p>Ven-Sab</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>18&ensp;&ndash;&ensp;01</p>
+                        <p>18&ensp;&ndash;&ensp;24</p>
                     </div>
                 </div>
                 <div class="row">    
@@ -177,10 +176,10 @@
                         <p>Domenica</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>18&ensp;&ndash;&ensp;23</p>
+                        <p>12&ensp;&ndash;&ensp;14<br>18&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso il Lunedì</em></p>
+                <p><em>Chiuso il Lunedì e Martedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
