--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="medium-6 large-6 columns">
                 <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
                 <p>Abbiamo un menù anche per questo.</p>
-                <a role="button" href="http://beerstrot.it/take-away/">Scopri il Menù &rarr;</a>
+                <a role="button" href="http://beerstrot.it/take-away/">Scopri il Menù Take Away &rarr;</a>
             </div>
         </div>
     </div>
