--- a/menu/cibo/buffalo-chicken-wings.html
+++ b/menu/cibo/buffalo-chicken-wings.html
@@ -176,25 +176,14 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                <meta itemprop="openingHours" content="We,Th,Su 18:00-23:00">
-                <meta itemprop="openingHours" content="Fr,Sa 18:00-24:00">
+                <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <meta itemprop="openingHours" content="Su 12:00-14:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mer-Gio</p>
+                        <p>Mer-Sab</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p><!--12&ensp;&ndash;&ensp;14
-                            <br> -->18&ensp;&ndash;&ensp;23
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="large-5 medium-5 small-6 columns">
-                        <p>Ven-Sab</p>
-                    </div>
-                    <div class="large-7 medium-7 small-6 columns">
-                        <p>18&ensp;&ndash;&ensp;24</p>
+                        <p>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
                 <div class="row">    
@@ -202,7 +191,7 @@
                         <p>Domenica</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>12&ensp;&ndash;&ensp;14<br>18&ensp;&ndash;&ensp;23</p>
+                        <p>12&ensp;&ndash;&ensp;14<br>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
                 <p><em>Chiuso il Lunedì e Martedì</em></p>
