--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -85,7 +85,7 @@
                 <p>Prenotazione obbligatoria entro Lunedì 9 Novembre.</p>
                 <hr>
                 <h2>Menù</h2>
-                <h3 class="subheader">Cibo</h3>
+                <h3 class="subheader">Mangiare</h3>
                 <ul>
                     <li>Vellutata di Castagne con Porcini e Guanciale Croccante</li>
                     <li>Crespelle ai Funghi di Stagione e Fontina</li>
