--- a/eventi/index.html
+++ b/eventi/index.html
@@ -56,6 +56,28 @@
         <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">11 Novembre 2015</h3>
+                    <h5>Orario: dalle 20:00</h5>
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <a href="http://beerstrot.it/eventi/halloween.html">
+                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/san-martino-th.jpg" alt="Cena di San Martino Alberi e Foglie">
+                    </a>
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Cena di San Martino</h2>
+                    <p>Menù a base di Castagne, Funghi e Vin Brulé.</p>
+                    <a href="http://beerstrot.it/eventi/san-martino.html">Scopri l'evento &rarr;</a>
+                </div>
+            </article>
+            <div class="row">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    <hr>
+                </div>
+            </div>
+            <article class="row">  
+                <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Ottobre 2015</h3>
                     <h5>Orario: dalle 23:00</h5>
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
