--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -81,7 +81,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Menù a base di Castagne, Funghi e Vin Brulé</h2>
                 <p>Per il ciclo: Cene</p>
-                <p>Per la sarata di San Martina offriamo un menù speciale a 28€.</p>
+                <p>Per la sarata di San Martina offriamo un <strong>menù speciale a 28€</strong>.</p>
                 <p>Prenotazione obbligatoria entro Lunedì 9 Novembre.</p>
                 <hr>
                 <h2>Menù</h2>
