--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -83,6 +83,8 @@
                 <p>Per il ciclo: Cene</p>
                 <p>Per la sarata di San Martina offriamo un <strong>menù speciale a 28€</strong>.</p>
                 <p>Prenotazione obbligatoria entro Lunedì 9 Novembre.</p>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
+            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Mangiare</h3>
