--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -82,7 +82,7 @@
                 <h2>Menù a base di Castagne, Funghi e Vin Brulé</h2>
                 <p>Per il ciclo: Cene</p>
                 <p>Per la sarata di San Martino abbiamo creato un <strong>menù speciale a 28€</strong>.</p>
-                <p>Prenotazione obbligatoria entro Lunedì 9 Novembre.</p>
+                <p>Solo su prenotazone entro Lunedì 9 Novembre.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
