--- a/menu/index.html
+++ b/menu/index.html
@@ -238,6 +238,108 @@
             </div>
         </section>
 <!-- cibo fine -->
+<!-- brunch -->
+        <section class="content" role="tabpanel" aria-hidden="true" id="brunch">
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h1>Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small></h1>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">special<br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Menù Brunch Special<span class="right">15</span></h3>
+                                <p>uova + pancakes + drink + acqua + caffè</p>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Uova<br><small>servite con contorno di patate al forno e insalata</small></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Eggs Benedict<span class="right">7</span></h3>
+                                <p>due uova in camicia servite su pane tostato con bacon croccante e salsa olandese</p>
+                            </li>
+                            <li>
+                                <h3>Eggs Florentine<span class="right">7</span></h3>
+                                <p>due uova in camicia servite su pane tostato con spinaci e salsa olandese</p>
+                            </li>
+                            <li>
+                                <h3>Eggs Norwegian<span class="right">7,5</span></h3>
+                                <p>due uova in camicia servite su pane tostato con salmone a umicato e salsa olandese</p>
+                            </li>
+                            <li>
+                                <h3>Eggs Scrambled<span class="right">7</span></h3>
+                                <p>due uova strapazzate con bacon croccante</p>
+                            </li>
+                            <li>
+                                <h3>Sunnyside<span class="right">7</span></h3>
+                                <p>due uova all’occhio di bue con bacon croccante</p>
+                            </li>
+                            <li>
+                                <h3>Omelette<span class="right">7,5</span></h3>
+                                <p>funghi e fontina</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">pancakes<br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Pancakes<span class="right">4,5</span></h3>
+                                <p>serviti con sciroppo d’acero e rondelle di banana con cioccolato fuso</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">drinks<br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Mimosa<span class="right">5</span></h3>
+                                <p>spumante brut e succo di arancia</p>
+                            </li>
+                            <li>
+                                <h3>Bellini<span class="right">5</span></h3>
+                                <p>spumante brut e succo di pesca</p>
+                            </li>
+                            <li>
+                                <h3>Bloody Mary<span class="right">5</span></h3>
+                                <p>vodka, succo di pomodoro, succo di limone, salsa worcestershire, tabasco, sale di sedano, pepe</p>
+                            </li>
+                            <li>
+                                <h3>Birra Artigianale Piccola<span class="right">4</span></h3>
+                                <p>scelta fra otto birre artigianali locali</p>
+                            </li>
+                            <li>
+                                <h3>Succo di Mela<span class="right">3</span></h3>
+                            </li>
+                            <li>
+                                <h3>Succo di Arancia<span class="right">3</span></h3>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- Brunch fine -->
 <!-- birra -->
         <section class="content" role="tabpanel" aria-hidden="false" id="birra">
             <div class="panel-menu-2n">
@@ -626,108 +728,6 @@
             </div>
         </section>
 <!-- vino fine -->
-<!-- brunch -->
-        <section class="content" role="tabpanel" aria-hidden="true" id="brunch">
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h1 class="subheader">Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small></h1>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-2n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">special<br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Menù Brunch Special<span class="right">15</span></h3>
-                                <p>uova + pancakes + drink + acqua + caffè</p>
-                            </li>
-                            
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Uova<br><small>servite con contorno di patate al forno e insalata</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Eggs Benedict<span class="right">7</span></h3>
-                                <p>due uova in camicia servite su pane tostato con bacon croccante e salsa olandese</p>
-                            </li>
-                            <li>
-                                <h3>Eggs Florentine<span class="right">7</span></h3>
-                                <p>due uova in camicia servite su pane tostato con spinaci e salsa olandese</p>
-                            </li>
-                            <li>
-                                <h3>Eggs Norwegian<span class="right">7,5</span></h3>
-                                <p>due uova in camicia servite su pane tostato con salmone a umicato e salsa olandese</p>
-                            </li>
-                            <li>
-                                <h3>Eggs Scrambled<span class="right">7</span></h3>
-                                <p>due uova strapazzate con bacon croccante</p>
-                            </li>
-                            <li>
-                                <h3>Sunnyside<span class="right">7</span></h3>
-                                <p>due uova all’occhio di bue con bacon croccante</p>
-                            </li>
-                            <li>
-                                <h3>Omelette<span class="right">7,5</span></h3>
-                                <p>funghi e fontina</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-2n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">pancakes<br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Pancakes<span class="right">4,5</span></h3>
-                                <p>serviti con sciroppo d’acero e rondelle di banana con cioccolato fuso</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">drinks<br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Mimosa<span class="right">5</span></h3>
-                                <p>spumante brut e succo di arancia</p>
-                            </li>
-                            <li>
-                                <h3>Bellini<span class="right">5</span></h3>
-                                <p>spumante brut e succo di pesca</p>
-                            </li>
-                            <li>
-                                <h3>Bloody Mary<span class="right">5</span></h3>
-                                <p>vodka, succo di pomodoro, succo di limone, salsa worcestershire, tabasco, sale di sedano, pepe</p>
-                            </li>
-                            <li>
-                                <h3>Birra Artigianale Piccola<span class="right">4</span></h3>
-                                <p>scelta fra otto birre artigianali locali</p>
-                            </li>
-                            <li>
-                                <h3>Succo di Mela<span class="right">3</span></h3>
-                            </li>
-                            <li>
-                                <h3>Succo di Arancia<span class="right">3</span></h3>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-<!-- Drink fine -->
     </div>
 <!-- tab fine -->
 <!-- inizio footer -->
