--- a/menu/index.html
+++ b/menu/index.html
@@ -10,6 +10,9 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Menù"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
