--- a/take-away/index.html
+++ b/take-away/index.html
@@ -50,7 +50,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Take Away</h1>
             <hr>
-            <p>Dal Mercoledì alla Domenica. Dalle 18:30.</p>
+            <p>Dal Mercoledì alla Domenica dalle 18:30</p>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
         </div>
