--- a/menu/index.html
+++ b/menu/index.html
@@ -249,7 +249,7 @@
                         <h1>Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small>
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h1>
-                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
+                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                     </div>
                 </div>
             </div>
