--- a/menu/index.html
+++ b/menu/index.html
@@ -246,9 +246,9 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h2>Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small>
+                        <p id="menu-brunch">Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small>
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space"><i class="fi-telephone"></i> 071 8853384</a></span>
-                        </h2>
+                        </p>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                     </div>
                 </div>
