--- a/menu/index.html
+++ b/menu/index.html
@@ -245,10 +245,10 @@
         <section class="content" role="tabpanel" aria-hidden="true" id="brunch">
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns" id="menu-brunch">
-                        <p >Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small>
+                    <div class="large-12 medium-12 columns">
+                        <h1>Brunch <br><small>Tutte le Domeniche dalle 12:00 alle 14:00</small>
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space"><i class="fi-telephone"></i> 071 8853384</a></span>
-                        </p>
+                        </h1>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                     </div>
                 </div>
