--- a/menu/index.html
+++ b/menu/index.html
@@ -247,7 +247,7 @@
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h4>Tutte le Domeniche dalle 12:00 alle 14:00
-                            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space"><i class="fi-telephone"></i> 071 8853384</a></span>
+                            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                     </div>
