--- a/menu/index.html
+++ b/menu/index.html
@@ -344,6 +344,14 @@
                     </div>
                 </div>
             </div>
+            <div class="panel-menu-n">
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                </div>
+            </div>
+        </div>
         </section>
 <!-- Brunch fine -->
 <!-- birra -->
