--- a/take-away/index.html
+++ b/take-away/index.html
@@ -197,7 +197,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel-menu-n no-space">
+        <div class="panel-menu-n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
