--- a/menu/index.html
+++ b/menu/index.html
@@ -59,7 +59,7 @@
         <div class="medium-12 large-12 small-12 columns extra-space-hero">
             <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
-                    <a href="#cibo" role="tab" tabindex="0" aria-selected="true" controls="cibo">Cibo</a>
+                    <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cena</a>
                 </li>
                 <li class="tab-title" role="presentational">
                     <a href="#brunch" role="tab" tabindex="3" aria-selected="false" controls="brunch">Brunch</a>
@@ -76,8 +76,8 @@
 <!-- fine tabbar switch-->
 <!-- tab inizio --> 
     <div class="tabs-content" id="menupage-text"> 
-<!-- cibo --> 
-        <section class="content active" role="tabpanel" aria-hidden="false" id="cibo">
+<!-- cena --> 
+        <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
@@ -240,8 +240,8 @@
                 </div>
             </div>
         </section>
-<!-- cibo fine -->
-<!-- brunch -->
+<!-- cena fine -->
+<!-- brunch inizio-->
         <section class="content" role="tabpanel" aria-hidden="true" id="brunch">
             <div class="panel-menu-n">
                 <div class="row">
