--- a/menu/index.html
+++ b/menu/index.html
@@ -80,6 +80,16 @@
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="panel-menu-n">
                 <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h4>Dal Mercoledì alla Domenica. Dalle 19:00 alle 23:00
+                            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
+                        </h4>
+                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
@@ -239,6 +249,14 @@
                     </div>
                 </div>
             </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                        <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                    </div>
+                </div>
+            </div>
         </section>
 <!-- cena fine -->
 <!-- brunch inizio-->
@@ -246,7 +264,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Tutte le Domeniche dalle 12:00 alle 14:00
+                        <h4>Tutte le Domeniche. Dalle 12:00 alle 14:00
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
@@ -345,13 +363,13 @@
                 </div>
             </div>
             <div class="panel-menu-n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                        <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                    </div>
                 </div>
             </div>
-        </div>
         </section>
 <!-- Brunch fine -->
 <!-- birra -->
