--- a/menu/index.html
+++ b/menu/index.html
@@ -106,8 +106,8 @@
                                 <p>con ripieno di zucca</p>
                             </li>
                             <li>
-                                <h3>Tris di Mini Muffin<span class="right">4,5</span></h3>    
-                                <p>vegetariani e non</p>
+                                <h3>Nachos Supreme<span class="right">4,5</span></h3>    
+                                <p>tortilla con peperoncini e cheddar</p>
                             </li>
                             <li>
                                 <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>    
