--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -239,6 +239,9 @@
                 </form>
             </div>
         </div>
+    </footer>
+    <footer class="panel-hr">
+        <hr>
     </footer>
     <footer class="panel-footer">
         <div class="row">
