--- a/eventi/index.html
+++ b/eventi/index.html
@@ -205,7 +205,7 @@
     </div>
 <!-- fine tabbar eventi-->
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
@@ -226,7 +226,6 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-
                 <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
                     <div class="row collapse">
                         <div class="small-8 columns">
@@ -242,6 +241,9 @@
                 </form>
             </div>
         </div>
+    </footer>
+    <footer class="panel-hr">
+        <hr>
     </footer>
     <footer class="panel-footer">
         <div class="row">
