--- a/social/index.html
+++ b/social/index.html
@@ -315,6 +315,9 @@
             </div>
         </div>
     </footer>
+    <footer class="panel-hr">
+        <hr>
+    </footer>
     <footer class="panel-footer">
         <div class="row">
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
