--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -131,7 +131,7 @@
     </div>
 <!-- fine navigazione -->
 <!-- inizio footer -->
-    <footer class="panel-prefooter">
+    <footer class="panel-prefooter extra-space-footer">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
