--- a/eventi/index.html
+++ b/eventi/index.html
@@ -205,7 +205,7 @@
     </div>
 <!-- fine tabbar eventi-->
 <!-- inizio footer -->
-    <footer class="panel-prefooter">
+    <footer class="panel-prefooter extra-space-footer">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
