--- a/eventi/festa-estate-concerto-live.html
+++ b/eventi/festa-estate-concerto-live.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="L'estate festeggiamola con i Flora e Fauna"/>
     <meta property="og:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
