--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birra Breaking Hops Double IPA"/>
     <meta property="og:description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
