--- a/menu/cibo/cecilia.html
+++ b/menu/cibo/cecilia.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Cecilia"/>
     <meta property="og:description" content="Hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/cecilia.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/cecilia.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/cecilia.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
