--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Costine in Salsa BBQ"/>
     <meta property="og:description" content="Costine di maiale con lunga cottura a bassa temperatura. Finite alla griglia con una spennellata di salsa BBQ. Succose e con un retrogusto leggermente dolce"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
