--- a/eventi/aperitivi.html
+++ b/eventi/aperitivi.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Estate + aperitivo = Ca' Vecchia Beerstrot"/>
     <meta property="og:description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/aperitivi.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/aperitivi.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/aperitivi.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
