--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
     <meta property="og:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/beerfest.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
