--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Halloween: Musica e Birra da Paura"/>
     <meta property="og:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween. Il 31 Ottobre, dalle 23:00, festa di Halloween sotto al fienile di Ca' Vecchia Beerstrot."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
