--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
     <meta property="og:site_name" content="Beerstrot | Instagramer"/>
     <meta property="og:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk. Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/instagramer.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
