--- a/eventi/san-martino.html
+++ b/eventi/san-martino.html
@@ -20,7 +20,9 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cena di San Martino"/>
     <meta property="og:description" content="11 Novembre ore 20:30. Cena di San Martino con menù a base di castagne e funghi"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/san-martino.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/san-martino.jpg"/>
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/san-martino.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
