--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birra Ape Regina"/>
     <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
