--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birramisù"/>
     <meta property="og:description" content="Birramisù. Un tiramisù fatto in casa con un leggerissimo sentore di birra stout"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/birramisu.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/birramisu.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/birramisu.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
