--- a/menu/cibo/buffalo-chicken-wings.html
+++ b/menu/cibo/buffalo-chicken-wings.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Buffalo Chicken Wings"/>
     <meta property="og:description" content="Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/buffalo-chicken-wings.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/buffalo-chicken-wings.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
