--- a/menu/cibo/cheesecake.html
+++ b/menu/cibo/cheesecake.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cheesecake"/>
     <meta property="og:description" content="Cheesecake in stile New York. Ricca e intensa"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheesecake.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/cheesecake.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
