--- a/menu/cibo/deciso.html
+++ b/menu/cibo/deciso.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Deciso"/>
     <meta property="og:description" content="1180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno forte carattere a questo hamburger"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/deciso.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/deciso.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/deciso.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
