--- a/menu/cibo/diablo.html
+++ b/menu/cibo/diablo.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Diablo"/>
     <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/diablo.jpg"/>
+    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/diablo.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/diablo.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
